<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jhonatan.calculadora.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">
        <TextView
            android:id="@+id/tDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/bNum7"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="1sp"
            android:background="@color/blue"
            android:text="@string/numero7"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="onButtonClicked"
            />
        <Button
            android:id="@+id/bNum8"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/numero8"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bNum9"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/numero9"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bSuma"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/suma"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/bNum4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/numero4"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bNum5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/numero5"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bNum6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/numero6"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bResta"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/resta"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/bNum1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/numero1"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bNum2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/numero2"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bNum3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/numero3"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bMultiplicacion"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/multiplicacion"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/bPunto"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/punto"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bNum0"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/numero0"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bIgual"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/igual"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
        <Button
            android:id="@+id/bDivision"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_margin="1sp"
            android:text="@string/division"
            android:textSize="30sp"
            android:onClick="onButtonClicked"/>
    </LinearLayout>
</LinearLayout>
